--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -22,16 +22,18 @@ COPY . .
 # Create necessary directories
 RUN mkdir -p logs models
 
-# Create database and initialize schema
-RUN python3 -c "\
-import sqlite3, os; \
-os.makedirs('logs', exist_ok=True); \
-conn = sqlite3.connect('trading_system.db'); \
-with open('scripts/init_db.sql', 'r') as f: \
-    conn.executescript(f.read()); \
-conn.commit(); \
-conn.close(); \
-print('Database initialized')"
+# Create necessary directories
+RUN mkdir -p logs models
+
+# Expose port
+EXPOSE 5000
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:5000/api/health || exit 1
+
+# Default command (can be overridden for different services)
+CMD ["python3", "app.py"]
 
 # Expose port
 EXPOSE 5000
